# renderknecht

./: .env  .envrc.dist  .gitignore  .gitmodules  AGENTS.md  Caddyfile  Dockerfile.renderknecht  Makefile  README.md  compose.yaml  devenv.nix  entrypoint.sh  flake.nix  pyproject.toml
src/: authors.yaml  preamble.yaml
src/renderknecht/: README.md  cli.py  podman_wrapper.py  pyproject.toml
src/renderknecht/renderers/: hugo.py  pandoc.py
src/renderknecht/renderknecht/: __init__.py
src/renderknecht/resources/: authors.yaml  preamble.yaml
src/renderknecht/tests/: test_app.py  test_pandoc.py
src/renderknecht/util/: pandoc_wrapper.py  yaml.py
src/renderknecht/web/: __init__.py
tests/: test_app.py  test_pandoc.py  test_wrapper.py
